--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="{% static 'ms-icon-144x144.png' %}">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Kristen Skousen Portraits</title>
+    <title>{{ blog.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
@@ -46,7 +46,7 @@
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="https://www.deviantart.com/lonedragon155/gallery/">DevArt</a>
                 <a class="nav-item nav-link" href="{% static 'ResumePlaceHolder.pdf' %}">Resume</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>   
+                <a class="nav-item nav-link active" href="#">Blog</a>   
             </div>
         </div>
         </nav>
@@ -54,40 +54,15 @@
     </header>
 
     <main role="main">
+      <div class="container">
 
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1 class="jumbotron-heading">Fine Art and Portraits</h1>
-          <p class="lead text-muted">Classic custom art, composed to your personal requirements to add an inspirational view to any space.</p>
-          <p>
-            <a href="#" class="btn btn-primary my-2">Contact Me</a>
-            <a href="#" class="btn btn-secondary my-2">Learn More</a>
-          </p>
-          <img src="{% static 'oil_portrait.jpg' %}" height="250" />
-        </div>
-      </section>
+      
+         <h1 class="text-center pt-3 pb-2" >{{ blog.title }}</h1>
+         <p>Posted on: {{ blog.pub_date }}</p>
+         <img class="img-fluid" src="{{ blog.image.url }}"/>
+         <p>{{ blog.body }}</p>
 
-      <div class="album py-5 bg-light">
-        <div class="container">
-
-          <div class="row">
-          
-            {% for job in jobs.all %}
-            
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{{ job.image.url }}" alt="portfolio image">
-                <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
-                </div>
-              </div>
-            </div>
-            
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-
+      </div> <!-- container -->
     </main>
 
     <footer class="text-muted">
